# recsys_project_MAUN

./: .pre-commit-config.yaml  dvc.yaml  inference.py  params.yaml  pyproject.toml  readme.md  requirements.txt
.dvc/: config
data/: .gitignore  BX-Book-Ratings.csv.dvc  BX-Books.csv.dvc  BX-Users.csv.dvc  notebooks.dvc  raw.dvc
data/eval/: metrics.json  metrics_CollaborativeFiltering.json  metrics_ContentBasedFiltering.json  metrics_HybridNNmodel.json  metrics_Hybrid_MF_STransformer.json  metrics_MatrixFactorization.json  metrics_STransformContentBase.json  metrics_baseline.json
src/metrics/: metrics.py
src/models/: base_model.py  baseline.py  collab_filter_model.py  content_based_filtering.py  hybrid_MF_stransformer.py  hybrid_nn_model.py  matrix_factorization.py  stransformer_content_based.py
src/steps/: constants.py  evaluate.py  prepare.py  split.py  train.py  train_base.py  train_baseline_model.py  train_collaborative_filtering.py  train_content_based_filtering.py  train_factorization.py  train_hybrid_MF_stransformer.py  train_hybrid_nn_model.py  train_s_transformer.py
src/tests/metrics/: __init__.py
